back-end anterior

--- a/front-end/pages/index.html
+++ b/front-end/pages/index.html
@@ -194,20 +194,18 @@
             <head class="header">Gameplay</head>
 
           </div>
-          <div class="togglers">
-            <div class="dificultad">
-              <label for="name">Select Difficulty</label>
-
-              <input class="diff" type="number" id="diff" name="diff" required minlength="0" maxlength="100">
-
-            </div>
-
-            <div class="volume">
-
-            </div>
+          <div class="difficulty-selector">
+            <p>Selecciona la dificultad:</p>
+            <input type="radio" id="easy" name="difficulty" value="easy" checked>
+            <label for="easy">Fácil</label>
+            <input type="radio" id="medium" name="difficulty" value="medium">
+            <label for="medium">Media</label>
+            <input type="radio" id="hard" name="difficulty" value="hard">
+            <label for="hard">Difícil</label>
+          </div>
 
           </div>
-        </div>
+        
         <div id="tab-5" class="tab-pane"> test5</div>
 
 
