--- a/front-end/pages/index.html
+++ b/front-end/pages/index.html
@@ -206,7 +206,24 @@
 
           </div>
         
-        <div id="tab-5" class="tab-pane"> test5</div>
+        <div id="tab-5" class="tab-pane"> 
+          <div class="tabi">
+          <div class="card">
+            <div class="imgBx">
+              <img src="/assetts/fotito.JPG">
+            </div>
+            <div class="user-content">
+              <div class="details">
+                <h2>{name}<br><span>Admin</span></h2>
+              </div>
+              <div class="change">
+                <button>CHANGE</button>
+                <v-btn>DELETE</v-btn>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
 
 
       </div>
