--- a/front-end/pages/index.html
+++ b/front-end/pages/index.html
@@ -211,32 +211,17 @@
         </div>
 
         <div id="tab-5" class="tab-pane">
-          <!--<div class="tabi">
-            <div class="card">
-              <div class="imgBx">
-                <img src="/assetts/fotito.JPG">
-              </div>
-              <div class="user-content">
-                <div class="details">
-                  <h2>{name}<br><span>Admin</span></h2>
-                </div>
-                <div class="change">
-                  <button>CHANGE</button>
-                  <v-btn>DELETE</v-btn>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="profile-pic-div">
-            <img src="/assetts/image.JPG" id="photo">
-            <input type="file" id="file">
-            <label for="file" id="uploadBtn">Change Photo</label>
-            !-->
-            <form action="/upload" method="post" enctype="multipart/form-data">
-              <input type="file" name="profilePic" accept="image/*">
-              <input type="hidden" name="userId" value="<%= user._id %>">
-              <input type="submit" value="Upload">
+
+            <h1>Profile Picture Upload</h1>
+            <form id="profile-picture-form">
+              <label for="profile-picture">Select a profile picture:</label>
+              <input type="file" id="profile-picture" accept="image/*" required>
+              <button type="submit">Upload</button>
             </form>
+            <div id="preview-container">
+              <h2>Preview</h2>
+              <img id="preview" src="" alt="Preview">
+            </div>
             
         </div>
 
