--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="sylesheet" href="/main.css" />
-    <link rel="sylesheet" href="/style.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <script src="https://unpkg.com/babel-polyfill/dist/polyfill.min.js"></script>
@@ -23,5 +21,21 @@
     <script type="module" src="/src/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
+<style>
+    html {
+        font-size: 14px;
+    }
+    
+    body {
+        width: 100vw;
+        height: 100vh;
+        font-family: poppins, sans-serif;
+        font-size: 0.88rem;
+        background-color: var(--color-background);
+        user-select: none;
+        overflow-x: hidden;
+        color: var(--color-dark);
+    }
+</style>
 
 </html>
